[gd_scene load_steps=16 format=3 uid="uid://cbndlk88l6e6g"]

[ext_resource type="Script" path="res://ui/minion_area.gd" id="1_oa4wg"]
[ext_resource type="Texture2D" uid="uid://bnu1lod5xpn3c" path="res://assets/cursors/move.png" id="2_ol7nb"]
[ext_resource type="Texture2D" uid="uid://fqmc3lxw51ry" path="res://assets/cursors/place.png" id="3_y2b0d"]
[ext_resource type="Texture2D" uid="uid://ccksqllu85rdn" path="res://assets/text/numbers.png" id="4_d5oug"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qoxmo"]
atlas = ExtResource("4_d5oug")
region = Rect2(20, 6, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmiw4"]
atlas = ExtResource("4_d5oug")
region = Rect2(0, 0, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n81f"]
atlas = ExtResource("4_d5oug")
region = Rect2(5, 0, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_guj3j"]
atlas = ExtResource("4_d5oug")
region = Rect2(10, 0, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqykp"]
atlas = ExtResource("4_d5oug")
region = Rect2(15, 0, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_2keyq"]
atlas = ExtResource("4_d5oug")
region = Rect2(20, 0, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v81w"]
atlas = ExtResource("4_d5oug")
region = Rect2(0, 6, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvlx7"]
atlas = ExtResource("4_d5oug")
region = Rect2(5, 6, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5py2"]
atlas = ExtResource("4_d5oug")
region = Rect2(10, 6, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwnd1"]
atlas = ExtResource("4_d5oug")
region = Rect2(15, 6, 5, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_i078r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoxmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmiw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n81f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guj3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqykp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2keyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v81w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvlx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5py2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwnd1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MinionArea" type="Area2D"]
script = ExtResource("1_oa4wg")
move_cursor = ExtResource("2_ol7nb")
summon_cursor = ExtResource("3_y2b0d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, 12)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_i078r")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
